# apertium-eu-eu_bis

./: .gitattributes  Makefile.am  README  configure.ac
test/: eu-eu_bis-pending-generator-expected.txt  eu-eu_bis-pending-input.txt  eu-eu_bis-pending-interchunk-expected.txt  eu-eu_bis-pending-morph-expected.txt  eu-eu_bis-pending-postchunk-expected.txt  eu-eu_bis-pending-postgen-gold.txt  eu-eu_bis-pending-pretransfer-expected.txt  eu-eu_bis-pending-tagger-expected.txt  eu-eu_bis-regression-chunker-expected.txt  eu-eu_bis-regression-input.txt  eu-eu_bis-regression-interchunk-expected.txt  eu-eu_bis-regression-morph-expected.txt  eu-eu_bis-regression-postchunk-expected.txt  eu-eu_bis-regression-postgen-expected.txt  eu-eu_bis-regression-postgen-gold.txt  eu-eu_bis-regression-pretransfer-expected.txt  eu-eu_bis-regression-tagger-expected.txt  eu_bis-eu-pending-input.txt  eu_bis-eu-pending-interchunk-expected.txt  eu_bis-eu-pending-morph-expected.txt  eu_bis-eu-pending-postchunk-expected.txt  eu_bis-eu-pending-postgen-expected.txt  eu_bis-eu-pending-postgen-gold.txt  eu_bis-eu-pending-pretransfer-expected.txt  eu_bis-eu-pending-tagger-expected.txt  eu_bis-eu-regression-chunker-expected.txt  eu_bis-eu-regression-generator-expected.txt  eu_bis-eu-regression-input.txt  eu_bis-eu-regression-morph-expected.txt  eu_bis-eu-regression-postchunk-expected.txt  eu_bis-eu-regression-postgen-gold.txt  eu_bis-eu-regression-pretransfer-expected.txt  eu_bis-eu-regression-tagger-expected.txt  tests.json
